--- a/project.yaml
+++ b/project.yaml
@@ -14,24 +14,13 @@ logger:
 api:
   password: !secret api_password
 
-ota:
-  - platform: esphome
-    password: !secret ota_password
-
 wifi:
   ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "Fallback Hotspot"
-    password: !secret hot_password
-
-captive_portal:
-    
+  password: !secret wifi_password    
 web_server:
   port: 80 
   version: 1
+
 text_sensor:
   - platform: wifi_info
     ip_address:
@@ -84,35 +73,77 @@ switch:
     turn_off_action:
       - output.turn_off: led_4
 
+interval:
+  - interval: 30s
+    then:
+      - logger.log: "Turn on LEDs"
+      - output.turn_on: led_0
+      - delay: 2s
+      - output.turn_on: led_1
+      - delay: 2s
+      - output.turn_on: led_2
+      - delay: 2s
+      - output.turn_on: led_3
+      - delay: 2s
+      - output.turn_on: led_4
+      - delay: 2s
+      - output.turn_on: led_5
+      - delay: 2s
+      - output.turn_on: led_6
+      - delay: 2s
+      - output.turn_on: led_7
+      - delay: 2s
+      - output.turn_on: led_8
+      - delay: 2s
+      - output.turn_on: led_9
+      - delay: 2s
+      - output.turn_on: led_10
+      - delay: 2s
+      - output.turn_off: led_0
+      - output.turn_off: led_1
+      - output.turn_off: led_2
+      - output.turn_off: led_3
+      - output.turn_off: led_4
+      - output.turn_off: led_5
+      - output.turn_off: led_6
+      - output.turn_off: led_7
+      - output.turn_off: led_8
+      - output.turn_off: led_9
+      - output.turn_off: led_10
+      - logger.log: "Turn off LEDs"
+
 # Twelve LED bar graph
 output:
   - platform: gpio
-    pin: GPIO27
-    id: led_1
-  - platform: gpio
-    pin: GPIO26
-    id: led_2
-  - platform: gpio
-    pin: GPIO25
-    id: led_3
+    pin: GPIO32
+    id: led_0
   - platform: gpio
     pin: GPIO33
+    id: led_1
+  - platform: gpio
+    pin: GPIO25
+    id: led_2
+  - platform: gpio
+    pin: GPIO26
+    id: led_3
+  - platform: gpio
+    pin: GPIO27
     id: led_4
   - platform: gpio
-    pin: GPIO32
+    pin: GPIO14
     id: led_5
   - platform: gpio
-    pin: GPIO10
+    pin: GPIO13
     id: led_6
   - platform: gpio
-    pin: GPIO9
+    pin: GPIO23
     id: led_7
   - platform: gpio
-    pin: GPIO13
+    pin: GPIO1
     id: led_8
   - platform: gpio
-    pin: GPIO12
+    pin: GPIO3
     id: led_9
   - platform: gpio
-    pin: GPIO14
+    pin: GPIO19
     id: led_10
